# mccag-backend

./: .dockerignore  .markdownlint.yaml  Dockerfile  README.md  pyproject.toml
src/mccag/: common.py  core.py  main.py  utils.py
src/mccag/routers/loader/: __init__.py  littleskin.py  official.py  upload.py
